@@ -15,7 +15,7 @@ sub _add_lvalue_attribute_methods {
             my $name = $attr->name;
             $class->meta->add_method(
                 $name,
-                sub  : lvalue {
+                sub : lvalue {
                     if ( defined( $_[1] ) ) {
                         $_[0]->{$name} = $_[1];
                     }
