@@ -4,6 +4,9 @@ Revision history for Mason
 
 2.21  Jan 16, 2014
 
+* Fixes
+  - Replace deprecated Class::MOP methods with Class::Load - perl-mason/pull/21 (Leeft)
+
 * Improvements
   - Add class_header shortcut to add to each component class header - perl-mason/pull/14
     (jomo666)
